[feature] support obtain query plan of query1 from pg